--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,112 @@
 <resources>
-    <string name="app_name">robin-android</string>
+    <string name="app_name">robin</string>
+
+    <!-- Main Screen -->
+    <string name="search_servers">Search Servers</string>
+    <string name="search_placeholder">Search servers...</string>
+    <string name="loading_servers">Loading server list...</string>
+    <string name="searching">Searching...</string>
+    <string name="no_servers">No servers available</string>
+    <string name="no_search_results">No matching servers found</string>
+    <string name="try_other_keywords">Try other keywords</string>
+    <string name="all_servers">All Servers (%d)</string>
+    <string name="search_results">Search Results (%d)</string>
+
+    
+    <!-- Map -->
+    <string name="map_name">Map Name</string>
+    <string name="unknown_map">Unknown Map</string>
+    <string name="view_map">View Map</string>
+    <string name="no_map_image">No Map Image Available</string>
+    <string name="map_preview">Map Preview: %s</string>
+    <string name="loading_map_image">Loading map image...</string>
+    <string name="map_image_load_failed">Map image failed to load</string>
+
+    <!-- Server Description -->
+    <string name="server_description">Server Description</string>
+    <string name="online_players">Online Players (%d)</string>
+    <string name="more_players">... %d more players</string>
+
+    <!-- Server Status -->
+    <string name="empty_server">Empty server</string>
+    <string name="full_server">Full server</string>
+    <string name="server_available">Available</string>
+    <string name="percent_full">%d%% full</string>
+
+    <!-- Menu -->
+    <string name="settings">Settings</string>
+    <string name="about">About</string>
+    <string name="language">Language</string>
+    <string name="api_region">API Region</string>
+    <string name="api_china">China Mainland</string>
+    <string name="api_global">Global</string>
+    <string name="app_version">App Version</string>
+    <string name="app_description">Game server browser and management tool</string>
+
+    <!-- Actions -->
+    <string name="close">Close</string>
+    <string name="cancel">Cancel</string>
+    <string name="confirm">Confirm</string>
+    <string name="save">Save</string>
+    <string name="refresh">Refresh</string>
+    <string name="auto_refresh">Auto Refresh</string>
+    <string name="auto_refresh_countdown">Auto refresh in %1$ds</string>
+    <string name="auto_refresh_enabled">Auto refresh enabled (every 5 seconds)</string>
+    <string name="auto_refresh_disabled">Auto refresh disabled</string>
+    <string name="last_updated">Last updated: %s</string>
+    <string name="refreshing_data">Refreshing data...</string>
+    <string name="visit_server_website">Visit Server Website</string>
+
+    <!-- Theme -->
+    <string name="theme">Theme</string>
+    <string name="theme_system">Follow System</string>
+    <string name="theme_light">Light</string>
+    <string name="theme_dark">Dark</string>
+    <string name="theme_dynamic">Dynamic Color (Android 12+)</string>
+
+    <!-- First Launch -->
+    <string name="welcome_to_robin">Welcome to Robin</string>
+    <string name="first_launch_setup">Initial Setup</string>
+    <string name="first_launch_description">Let\'s configure your experience based on your preferences</string>
+    <string name="select_language">Select Language</string>
+    <string name="select_api_region">Select API Region</string>
+    <string name="api_china_description">Optimized for users in Mainland China</string>
+    <string name="api_global_description">Recommended for international users</string>
+    <string name="complete_setup">Complete Setup</string>
+    <string name="setup_complete">Setup Complete!</string>
+    <string name="setup_success_message">Your preferences have been saved successfully.</string>
+    <string name="continue_text">Continue</string>
+    <string name="skip_setup">Skip</string>
+    <string name="later_text">Maybe Later</string>
+
+    <!-- Errors -->
+    <string name="network_error">Network Error</string>
+    <string name="failed_to_load_servers">Failed to load servers</string>
+    <string name="failed_to_refresh_servers">Failed to refresh servers</string>
+
+    <!-- Server Detail Panel -->
+    <string name="server_address">Server Address</string>
+    <string name="game_version_detail">Game Version</string>
+    <string name="update_time_detail">Update Time</string>
+    <string name="player_statistics">Player Statistics</string>
+    <string name="current_players_detail">Current Players: %d</string>
+    <string name="bots_detail">Bots: %d</string>
+    <string name="max_capacity_detail">Max Capacity: %d</string>
+    <string name="server_properties_detail">Server Properties</string>
+    <string name="dedicated_server_detail">Dedicated Server</string>
+    <string name="non_dedicated_server_detail">Non-Dedicated Server</string>
+    <string name="server_description_detail">Server Description</string>
+    <string name="online_players_detail">Online Players (%d)</string>
+    <string name="more_players_detail">... %d more players</string>
+    <string name="view_map_detail">View Map</string>
+    <string name="no_map_image_detail">No Map Image Available</string>
+    <string name="visit_server_website_detail">Visit Server Website</string>
+
+    <!-- Quick Filters -->
+    <string name="app_quick_filters">Quick Filters</string>
+    <string name="app_filter_official_invasion">Official Invasion</string>
+    <string name="app_filter_official_ww2_invasion">Official WW2 Invasion</string>
+    <string name="app_filter_official_dominance">Official Dominance</string>
+    <string name="app_filter_official_mod_castling">Official Mod Castling</string>
+    <string name="app_filter_official_mod_helldivers">Official Mod HellDivers</string>
 </resources>
