--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -8,6 +8,27 @@
     <string name="searching">搜索中...</string>
     <string name="no_servers">暂无服务器</string>
     <string name="no_search_results">未找到匹配的服务器</string>
+
+    <!-- Common -->
+    <string name="loading">加载中...</string>
+    <string name="update_available">更新可用</string>
+    <string name="mandatory_update">需要强制更新</string>
+    <string name="download">下载</string>
+    <string name="later">稍后</string>
+    <string name="update">更新</string>
+    <string name="update_dialog_title">应用更新</string>
+    <string name="update_dialog_message">发现新版本 (%1$s)！您当前使用的是 %2$s 版本。</string>
+    <string name="mandatory_update_dialog_message">需要强制更新。请更新到 %1$s 版本以继续使用应用。</string>
+    <string name="changelog">更新内容：</string>
+    <string name="release_notes">发布说明：</string>
+    <string name="checking_for_update">检查更新中...</string>
+    <string name="no_update_available">您已使用最新版本</string>
+    <string name="current_version">当前版本</string>
+    <string name="update_status">更新状态</string>
+    <string name="check_for_updates">检查更新</string>
+    <string name="system_information">系统信息</string>
+    <string name="links">链接</string>
+    <string name="idle">就绪</string>
     <string name="try_other_keywords">尝试其他关键词</string>
     <string name="all_servers">所有服务器 (%d)</string>
     <string name="search_results">搜索结果 (%d)</string>
@@ -109,6 +130,14 @@
     <string name="app_filter_official_dominance">官方 PVP</string>
     <string name="app_filter_official_mod_castling">官方 Mod Castling</string>
     <string name="app_filter_official_mod_helldivers">官方 Mod 地狱潜兵</string>
+
+    <!-- GitHub Link -->
+    <string name="view_on_github">在 GitHub 上查看</string>
+
+    <!-- Update Messages -->
+    <string name="mandatory_update_message">需要强制更新 (%1$s → %2$s)</string>
+    <string name="optional_update_message">发现新版本: %1$s → %2$s</string>
+    <string name="view_version_info">查看版本信息</string>
 
     <!-- Disclaimer -->
     <string name="disclaimer_title">免责声明</string>
